# Rusty_PDF_Manager

./: .gitignore  Cargo.toml  README.md  build.rs  icon.rc
src/: main.rs
